# vc4d

./: .gitignore  CMakeLists.txt  Warp3D.library  cppsupport.c  debug.c  devicetree.h  draw.cpp  draw.h  draw_cpu.cpp  draw_vc4.c  m.cmd  main.c  simple.h  test.c  v3d_regs.h  vc4.c  vc4.h  vc4d.h  warp3d.c
cmake/: toolchain.cmake
qpu/: alpha_blend.qasm  blend_src_one_minus_src.qasm  body.qasm  clear_region.qasm  common.qinc  copy_interpolated_color.qasm  interp_color.qasm  load_alpha_ref.qasm  load_color.qasm  load_tex.qasm  load_z.qasm  loop.qasm  loop_template.qasm  loop_z_equal.qasm  loop_z_equal_update.qasm  loop_z_lequal.qasm  loop_z_lequal_update.qasm  loop_z_less.qasm  loop_z_less_update.qasm  loop_z_none.qasm  outer_loop.qasm  tex_lookup_wrap.qasm  w3d_a_gequal.qasm  w3d_a_greater.qasm  w3d_a_notequal.qasm  w3d_blend.qasm  w3d_decal.qasm  w3d_dst_alpha.qasm  w3d_dst_color.qasm  w3d_modulate.qasm  w3d_one.qasm  w3d_one_minus_dst_alpha.qasm  w3d_one_minus_dst_color.qasm  w3d_one_minus_src_alpha.qasm  w3d_one_minus_src_color.qasm  w3d_replace.qasm  w3d_src_alpha.qasm  w3d_src_color.qasm  w3d_zero.qasm
